# ButtonBOX

./: .gitignore  README.md
MemoryBank/: MEMORY_BANK.md  TELEMETRI_KURULUM.md  implementation_plan.md  walkthrough.md
mobile/: build_log.txt  build_log_2.txt  settings.gradle
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/ets2/buttonbox/: MainActivity.kt
mobile/app/src/main/java/com/ets2/buttonbox/model/: Models.kt
mobile/app/src/main/java/com/ets2/buttonbox/network/: TCPClient.kt  UDPDiscoveryClient.kt
mobile/app/src/main/java/com/ets2/buttonbox/ui/components/: KeyboardPicker.kt  MapView.kt  PushButton.kt  RotarySwitch.kt
mobile/app/src/main/java/com/ets2/buttonbox/utils/: PresetActions.kt  ScanCodes.kt
mobile/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
mobile/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
mobile/app/src/main/res/values/: strings.xml  themes.xml
server/: CMakeLists.txt  buttons.json
server/src/: main.cpp  resources.rc
server/src/config/: ConfigManager.h  ProfileAnalyzer.h
server/src/core/: Logger.h
server/src/gui/: Dashboard.h
server/src/input/: InputController.h
server/src/network/: TCPServer.h  UDPDiscoveryServer.h
server/src/state/: StateManager.h
server/src/telemetry/: TelemetryListener.h
server/tests/: test_server.py
